Edited visibility of some elements to fix visual bugs while loading

--- a/start_room/start_room.css
+++ b/start_room/start_room.css
@@ -87,6 +87,7 @@ body {
 
 .arrow {
     position: absolute;
+    visibility: hidden;
 }
 
 .arrow img {
@@ -95,6 +96,7 @@ body {
 
 .raccoon {
     position: absolute;
+    visibility: hidden;
 }
 
 .raccoon img {
